# Sistema-de-Controle-Financeiro

./: .gitignore  CMakeLists.txt  README.md  despesa.h  estrategia.cpp  estrategia.h  janelacadastro.cpp  janelacadastro.h  janelacadastro.ui  janelacriarestrategia.cpp  janelacriarestrategia.h  janelacriarestrategia.ui  janelaestrategia.cpp  janelaestrategia.h  janelaestrategia.ui  janelalogin.cpp  janelalogin.h  janelalogin.ui  janelanovadespesa.cpp  janelanovadespesa.h  janelanovadespesa.ui  janelaprincipal.cpp  janelaprincipal.h  janelaprincipal.ui  janelasenha.cpp  janelasenha.h  janelasenha.ui  janelasobremim.cpp  janelasobremim.h  janelasobremim.ui  lancamento.h  main.cpp  perfis.cpp  perfis.h  recursos.qrc  user.cpp  user.h
